# sql-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  smoke_test.py
src/sql_mcp/: database.py  seed.py  server.py
